[gd_scene load_steps=9 format=3 uid="uid://c23wxpxl7cocu"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_smdkj"]
[ext_resource type="PackedScene" uid="uid://budt3ysa5gk1b" path="res://scenes/piloting.tscn" id="1_ul1dy"]
[ext_resource type="Script" path="res://scripts/right_splitscreen_overlay.gd" id="3_ghbi3"]
[ext_resource type="PackedScene" uid="uid://l7cwkj8n10kq" path="res://scenes/repair.tscn" id="3_k7qbc"]
[ext_resource type="AudioStream" uid="uid://du8hdxmjy48xq" path="res://assets/music/Cyberpunk Dark Synthwave - Dark Future  Royalty Free Copyright Safe Music_trimmed.mp3" id="5_yr6mc"]
[ext_resource type="Script" path="res://scripts/dialogue_box.gd" id="6_hub56"]
[ext_resource type="AudioStream" uid="uid://c3kd46t5rlkx" path="res://assets/voice_lines/bussing.mp3" id="6_ialhd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7icpt"]
bg_color = Color(0.30211, 0.919529, 0.27023, 0.654902)
shadow_size = 10
shadow_offset = Vector2(5, 5)

[node name="Game Manager" type="Node2D"]
script = ExtResource("1_smdkj")

[node name="SplitscreenHBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0
alignment = 1

[node name="LeftSplitscreenViewportContainer" type="SubViewportContainer" parent="SplitscreenHBoxContainer"]
layout_mode = 2

[node name="LeftSplitscreenViewport" type="SubViewport" parent="SplitscreenHBoxContainer/LeftSplitscreenViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(955, 1080)
render_target_update_mode = 4

[node name="Piloting" parent="SplitscreenHBoxContainer/LeftSplitscreenViewportContainer/LeftSplitscreenViewport" instance=ExtResource("1_ul1dy")]
unique_name_in_owner = true
position = Vector2(223, 125)
shields_up_time = 7.0

[node name="LeftSplitscreenCamera2D" type="Camera2D" parent="SplitscreenHBoxContainer/LeftSplitscreenViewportContainer/LeftSplitscreenViewport"]
unique_name_in_owner = true

[node name="Separator" type="ColorRect" parent="SplitscreenHBoxContainer"]
custom_minimum_size = Vector2(10, 2.08165e-12)
layout_mode = 2

[node name="RightSplitscreenViewportContainer" type="SubViewportContainer" parent="SplitscreenHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RightSplitscreenViewport" type="SubViewport" parent="SplitscreenHBoxContainer/RightSplitscreenViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(955, 1080)
render_target_update_mode = 4

[node name="RightSplitscreenCamera2D" type="Camera2D" parent="SplitscreenHBoxContainer/RightSplitscreenViewportContainer/RightSplitscreenViewport"]
unique_name_in_owner = true
ignore_rotation = false
zoom = Vector2(49, 49)

[node name="RightSplitscreenOverlayViewportContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_ghbi3")

[node name="RightSplitscreenOverlaySubViewport" type="SubViewport" parent="RightSplitscreenOverlayViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Repair" parent="RightSplitscreenOverlayViewportContainer/RightSplitscreenOverlaySubViewport" instance=ExtResource("3_k7qbc")]
unique_name_in_owner = true

[node name="RightSplitscreenOverlayCamera2D" type="Camera2D" parent="RightSplitscreenOverlayViewportContainer/RightSplitscreenOverlaySubViewport"]
unique_name_in_owner = true
zoom = Vector2(2, 2)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yr6mc")
volume_db = -25.662
autoplay = true

[node name="VoiceLinePlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_ialhd")
volume_db = -20.26

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.654902)
offset_left = 398.0
offset_top = 11.0
offset_right = 551.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 42
text = "LEVEL 1"

[node name="DialogueBox" type="Control" parent="." node_paths=PackedStringArray("label")]
unique_name_in_owner = true
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("6_hub56")
label = NodePath("PanelContainer/HBoxContainer/Label")

[node name="PanelContainer" type="PanelContainer" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -221.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7icpt")

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBox/PanelContainer"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="DialogueBox/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Pilot: Find the busted computer and those shields up now! We've got incoming drones!

WASD: Move spaceship
ARROWS: Move engineer
SPACE or ENTER: Repair Computer"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="level_changed" from="SplitscreenHBoxContainer/LeftSplitscreenViewportContainer/LeftSplitscreenViewport/Piloting" to="." method="_on_piloting_level_changed"]
[connection signal="shields_down" from="SplitscreenHBoxContainer/LeftSplitscreenViewportContainer/LeftSplitscreenViewport/Piloting" to="." method="_on_piloting_shields_down"]
[connection signal="shields_down" from="SplitscreenHBoxContainer/LeftSplitscreenViewportContainer/LeftSplitscreenViewport/Piloting" to="RightSplitscreenOverlayViewportContainer/RightSplitscreenOverlaySubViewport/Repair" method="_on_piloting_shields_down"]
[connection signal="computer_repaired" from="RightSplitscreenOverlayViewportContainer/RightSplitscreenOverlaySubViewport/Repair" to="." method="_on_repair_computer_repaired"]
[connection signal="computer_repaired" from="RightSplitscreenOverlayViewportContainer/RightSplitscreenOverlaySubViewport/Repair" to="SplitscreenHBoxContainer/LeftSplitscreenViewportContainer/LeftSplitscreenViewport/Piloting" method="_on_repair_computer_repaired"]
